# swarmint

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PAPER.md  README.md  benchmark.py  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: tests.yml
deploy/gcp-beacon/: README.md  backbone.sh  bootstrap.sh  provision.sh
deploy/oracle-beacon/: README.md  bootstrap.sh
docker/nat-test/: Dockerfile  README.md  entrypoint.sh  gen_compose.py  run.sh
docker/nat-test/netns-lab/: README.md  punch-diag.sh  punch-lab.sh
docs/: CNAME  docs.html  index.html  paper.html  robots.txt  site.js  site.webmanifest  sitemap.xml  styles.css
docs/assets/: gen_icons.py  gen_og_image.py
docs/infer/: index.html
docs/infer/swarmint-client/: wire.mjs
examples/: quickstart.py
js/swarmint-client/: genesis_embedding.json  package.json  parity_check.mjs
js/swarmint-client/src/: embedding.mjs  identity.mjs  wire.mjs
scripts/: export_genesis_embedding.py
swarmint/: cli.py
swarmint/core/: embedding.py  features.py  prototype_model.py  update_chain.py  version.py
swarmint/inference/: aggregate.py  rpc.py
swarmint/network/: beacon_status.py  bus.py  discovery.py  federation.py  identity.py  nat.py  simbus.py  udp_bus.py  webrtc_answerer.py  wire.py
swarmint/node/: net_node.py  runner.py  swarm_node.py
swarmint/sim/: data.py  data_multimodal.py  infer_query.py  live_task.py  multimodal_backbone.py  multimodal_query.py  net_daemon.py  real_data.py  resources.py  run_cross_beacon.py  run_digits.py  run_embedding_ab.py  run_faces.py  run_generality.py  run_inference.py  run_multimodal.py  run_multimodal_net.py  run_multiproc.py  run_sim.py  run_webrtc_infer.py  run_webrtc_signaling.py  swarm_backbone.py
tests/: test_beacon_status.py  test_core.py  test_cross_beacon.py  test_digits.py  test_discovery.py  test_embedding.py  test_faces.py  test_features.py  test_federation.py  test_generality.py  test_identity.py  test_infer_query.py  test_inference_rpc.py  test_js_parity.py  test_multimodal.py  test_multimodal_net.py  test_multiproc.py  test_nat.py  test_net.py  test_net_embedding.py  test_net_node.py  test_node_id_migration.py  test_relay.py  test_runner.py  test_topics.py  test_update_chain.py  test_webrtc_answerer.py  test_wire.py
web/: README.md  _serve_with_mime.py  infer.html
web/swarmint-client/: _selfcheck.mjs  identity.mjs
