[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmint"
version = "0.1.0"
description = "Decentralized, Byzantine-robust swarm learning: tiny prototype models that gossip over a real P2P network — no central server, no gradient sharing."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "swarmint contributors" }]
keywords = [
    "decentralized-learning", "federated-learning", "swarm-intelligence",
    "gossip-protocol", "byzantine-fault-tolerance", "p2p", "kademlia", "dht",
    "prototype-learning", "edge-ai", "multimodal",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

# Core runtime: the in-process simulator + learning core need only numpy.
dependencies = [
    "numpy>=2",
]

[project.optional-dependencies]
# Real P2P networking (UDP + Kademlia DHT + Ed25519 signing + msgpack wire).
net = [
    "kademlia==2.2.3",
    "rpcudp==5.0.1",
    "pynacl==1.6.2",
    "msgpack==1.2.1",
]
# Resource governor for the multiprocess harness.
cluster = ["psutil>=7"]
# Real-data validation + the shared genesis embedding (PCA/LDA).
learn = ["scikit-learn>=1.5"]
# WebRTC-capable answering node (browser <-P2P-> node inference; beacon signals only).
web = ["aiortc>=1.9"]
# Everything, for development.
dev = [
    "kademlia==2.2.3", "rpcudp==5.0.1", "pynacl==1.6.2", "msgpack==1.2.1",
    "psutil>=7", "scikit-learn>=1.5", "aiortc>=1.9",
]

[project.scripts]
swarmint = "swarmint.cli:main"

[project.urls]
Homepage = "https://github.com/shaswata56/swarmint"
Repository = "https://github.com/shaswata56/swarmint"

[tool.setuptools.packages.find]
include = ["swarmint*"]
